--- a/Assignment-6/css/style.css
+++ b/Assignment-6/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #d9e6f2;
+    background: #f1f1f1;
 }
 .thumbnail {
     position:relative;
@@ -11,7 +11,7 @@ body {
     width: 100%;
     left: 0px;
     top: 30%;
-    background-color: green;
+    background-color: aliceblue;
 }
 
 .videos-div {
